--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,9 @@
 spring.application.name=herois-api
+
+spring.datasource.url=jdbc:postgresql://localhost:5432/heroisdb
+spring.datasource.username=senai_user
+spring.datasource.password=1234
+spring.jpa.hibernate.ddl-auto=update
+
+spring.jpa.show-sql=true
+spring.jpa.properties.hibernate.format_sql=true
